--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "Integrate AngularJS 1.5.x and ArcGIS 3.x",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "gulp:build": "gulp build",
+    "gulp:serve": "gulp serve",
+    "gulp:dev": "gulp dev",
+    "build": "npm run gulp:build",
+    "start": "npm run gulp:dev"
   },
   "author": "beginor <beginor@qq.com>",
   "license": "ISC",
